server: add list lds
