# api/sidecar.go
@@ -106,3 +106,35 @@ func ListCDS(ctx *gin.Context) {
 	}
 	ResponseData(ctx, CodeSuccess, cds)
 }
+
+// ListLDS
+// @Description 获取边车的LDS(所有监听端口)
+// @Summary  获取边车的LDS(所有监听端口)
+// @Tags 	sidecar
+// @Param	id			query		int64		true		"id"
+// @Param	namespace	query		string		true		"namespace"
+// @Param	pod			query		string		true		"pod"
+// @Success 200 {object} Result  "ok"
+// @Router /sidecar/lds/list [get]
+func ListLDS(ctx *gin.Context) {
+	idStr := ctx.Query("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		ResponseError(ctx, http.StatusBadRequest, err)
+		return
+	}
+
+	kubeConfig, err := model.KubeConfigDB.GetKubeConfigById(id)
+	if err != nil {
+		ResponseData(ctx, CodeDbError, nil)
+		return
+	}
+
+	cds, err := sidecar.NewSidecar(kube.GetConfigStoreKubeConfig(kubeConfig)).
+		GetLDS(ctx.Query("namespace"), ctx.Query("pod"))
+	if err != nil {
+		Response(ctx, http.StatusOK, CodeKubeConnectError, err.Error(), nil)
+		return
+	}
+	ResponseData(ctx, CodeSuccess, cds)
+}
